Internationalize admin, create

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,6 +2,153 @@
     "translation": {
         "button-get-started": "Get Started",
         "button-login": "Sign in",
+        "button-change-language": "Byt språk",
+        "button-logout": "Sign out",
+        "button-help": "Help",
+        "button-edit": "Edit",
+        "button-delete": "Delete",
+        "button-filter": "Filter",
+        "button-search": "Search",
+        "button-clear": "Clear",
+        "button-close": "Close",
+        "button-detach-gpu": "Detach GPU",
+        "loading": "Loading...",
+        "error-could-not-fetch-users": "Could not fetch users",
+        "error-could-not-fetch-vms": "Could not fetch vms",
+        "error-could-not-fetch-deployments": "Could not fetch deployments",
+        "error-could-not-fetch-gpus": "Could not fetch GPUs",
+        "error-creating-deployment": "Error creating deployment",
+        "error-creating-vm": "Error creating VM",
+        "error-all-fields": "Please fill all fields",
+        "resource-deployments": "Deployments",
+        "resource-kubernetes-deployment": "Kubernetes deployment",
+        "resource-vms": "Virtual machines",
+        "resource-vm": "Virtual machine",
+        "resource-gpus": "GPUs",
+        "resource-gpu": "GPU",
+        "resource-users": "Users",
+        "resource-type": "Resource type",
+        "menu-label": "Menu",
+        "menu-manage-resources": "Manage resources",
+        "menu-dashboard": "Dashboard",
+        "menu-create-new": "Create new",
+        "menu-profile": "Profile",
+        "menu-cbhcloud": "cbhcloud",
+        "menu-status": "Status",
+        "menu-wiki": "Wiki",
+        "menu-support": "Support",
+        "menu-mastodon": "Mastodon",
+        "menu-admin": "Admin",
+        "menu-admin-panel": "Admin panel",
+        "menu-cloudstack": "CloudStack",
+        "menu-rancher": "Rancher (K8s)",
+        "menu-keycloak": "Keycloak (IAM)",
+        "menu-dns": "DNS",
+        "time-hours-ago": "hours ago",
+        "time-minutes-ago": "minutes ago",
+        "time-seconds-ago": "seconds ago",
+        "admin-title": "Admin",
+        "admin-refresh-resources": "Refresh resources",
+        "admin-last-load": "Last refreshed",
+        "admin-showing": "Showing",
+        "admin-loaded-deployments": "loaded deployments",
+        "admin-loaded-vms": "loaded vms",
+        "admin-loaded-gpus": "loaded GPUs",
+        "admin-loaded-users": "loaded users",
+        "admin-name": "Name",
+        "admin-user": "User",
+        "admin-id": "ID",
+        "admin-username": "Username",
+        "admin-email": "Email",
+        "admin-role": "Role",
+        "admin-is-admin": "Admin",
+        "admin-usage": "Usage",
+        "admin-visibility": "Visibility",
+        "admin-visibility-public": "Public",
+        "admin-visibility-private": "Private",
+        "admin-integrations": "Integrations",
+        "admin-status": "Status",
+        "admin-actions": "Actions",
+        "admin-specs": "Specs",
+        "admin-leased-until": "Leased until",
+        "admin-gpu": "GPU",
+        "admin-gpu-expired": "Expired",
+        "admin-gpu-active": "Active",
+        "admin-edit-permissions-in": "Edit user roles and permissions in",
+        "create-title": "Create new resource",
+        "create-already-taken": "already taken",
+        "create-deployment": "Create Deployment",
+        "create-deployment-subheader": "Choose a nice name for your deployment, as it will also be its subdomain",
+        "create-deployment-name-warning": "Your deployment will be created with the name",
+        "create-deployment-name": "Deployment name",
+        "create-deployment-image": "Image",
+        "create-deployment-image-subheader": "If you would like to use a prebuilt image, enter its name below. For example mongo, mongo:4.4 or quay.io/keycloak/keycloak",
+        "create-deployment-custom-domain": "Custom Domain",
+        "create-deployment-custom-domain-subheader": "Specify a custom domain. Add a CNAME record for this domain pointing to app.cloud.cbh.kth.se. If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the deployment is created.",
+        "create-deployment-domain": "Domain",
+        "create-deployment-domain-example": "example.com",
+        "create-deployment-env": "Set environment variables",
+        "create-deployment-env-subheader": "Environment variables are accessible from inside your deployment and can be used to configure your application, store secrets, and more. Traffic will be sent to the port specified in the PORT environment variable. Change its value to the port your app is listening to",
+        "create-deployment-env-key": "Variable",
+        "create-deployment-env-value": "Value",
+        "create-deployment-persistent": "Persistent storage",
+        "create-deployment-persistent-subheader": "Persistent storage allows data to be stored and accessed across multiple deployments.",
+        "create-deployment-app-path": "App path",
+        "create-deployment-app-path-label": "Path in your app",
+        "create-deployment-storage-path": "Storage path",
+        "create-deployment-storage-path-label": "Path in your kthcloud storage",
+        "create-and-stay": "Create and stay",
+        "create-and-go": "Create",
+        "create-vm": "Create VM",
+        "create-vm-no-resources": "You do not have enough resources to create a VM. Please delete some other virtual machines or contact support.",
+        "create-vm-warning": "Your VM will be created with the name",
+        "create-vm-ssh-key": "SSH Key",
+        "create-vm-ssh-key-subheader": "Don't have a key yet? Add one to your ",
+        "create-vm-ssh-key-subheader-link": "profile",
+        "create-vm-select-specs": "Select specs",
+        "create-vm-number-of-cpu-cores": "Number of CPU cores",
+        "create-vm-amount-of-ram": "Amount of RAM in GB",
+        "create-vm-disk-size": "Disk Size",
+        "create-vm-disk-size-helper": "Disk size in GB",
+        "create-vm-gpu-next-step": "You can attach a GPU in the next step.",
+        "create-vm-minimum-disk-size": "Minimum disk size",
+        "create-vm-max-disk-size": "Max disk available",
+        "create-vm-input-number": "Input a number",
+        "create-vm-minimum-ram": "Minimum RAM",
+        "create-vm-max-ram": "Max RAM available",
+        "create-vm-minimum-cpu": "Minimum CPU cores",
+        "create-vm-max-cpu": "Max CPU cores available",
+        "create-deployment-github-title": "Connect GitHub repository",
+        "create-deployment-github-subheader": "Link your GitHub repo for automatic Continuous Delivery. If not linked, instructions for pushing your container image will be provided later.",
+        "create-deployment-github-repo": "Repository",
+        "login-with-github": "Login with GitHub",
+        "example-use-cases": "See example use cases",
+        "use-case": "Use case",
+        "resouce-comparison-stateless-frontend": "Stateless frontend service: eg. React, AngularJS",
+        "resouce-comparison-stateless-backend": "Stateless backend service: eg. Express.js, Flask",
+        "resouce-comparison-machine-learning-gpu": "Machine learning GPU compute: eg. TensorFlow, JupyterLab",
+        "resouce-comparison-game-streaming-server": "Game streaming server: eg. Steam Remote Play, Parsec",
+        "resouce-comparison-databases": "Databases: eg. MySQL, MongoDB",
+        "resouce-comparison-real-time-analytics": "Real-time analytics: eg. Apache Kafka, Elasticsearch",
+        "resouce-comparison-cache-services": "Cache services: eg. Redis, Memcached",
+        "resouce-comparison-data-processing-pipelines": "Data processing pipelines: eg. Apache Hadoop, Spark",
+        "resouce-comparison-image-processing-services": "Image processing services: eg. Pillow, OpenCV",
+        "resouce-comparison-media-streaming-services": "Media streaming services: eg. Plex, Emby",
+        "resouce-comparison-serverless-computing-services": "Serverless computing services: eg. Cloudflare workers",
+        "resouce-comparison-iot-data-collection": "IoT data collection and processing: eg. MQTT, Node-RED",
+        "resouce-comparison-microservice-based-applications": "Microservice-based applications: eg. Spring Boot, Django",
+        "resouce-comparison-ci-cd-pipelines": "Continuous integration and delivery pipelines: eg. Jenkins, GitLab Runner",
+        "resouce-comparison-batch-jobs": "Batch jobs for data transformation: eg. Talend, Informatica PowerCenter",
+        "resouce-comparison-web-scraping-services": "Web scraping services: eg. Scrapy, Beautiful Soup",
+        "resouce-comparison-logging-services": "Logging services: eg. Logstash, Sentry",
+        "llama-label": "What do you want to make? Ask Llama 2:",
+        "llama-mysql": "mysql database",
+        "llama-machine-learning": "machine learning",
+        "llama-react-frontend": "react frontend",
+        "choose-zone": "Choose zone",
+        "choose-zone-subheader-1": "Your chosen zone determines where your",
+        "choose-zone-subheader-2": "will be hosted. Selecting the closest zone to your users will improve performance",
+
         "landing-hero-gpu": "GPUs",
         "landing-hero-cpu": "CPU cores",
         "landing-hero-ram": "Terabytes of memory",
