internationalize deploy dashboard

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -122,6 +122,7 @@
         "create-deployment-github-subheader": "Link your GitHub repo for automatic Continuous Delivery. If not linked, instructions for pushing your container image will be provided later.",
         "create-deployment-github-repo": "Repository",
         "login-with-github": "Login with GitHub",
+        "error-getting-repos": "Error getting repositories",
         "example-use-cases": "See example use cases",
         "use-case": "Use case",
         "resouce-comparison-stateless-frontend": "Stateless frontend service: eg. React, AngularJS",
@@ -148,7 +149,14 @@
         "choose-zone": "Choose zone",
         "choose-zone-subheader-1": "Your chosen zone determines where your",
         "choose-zone-subheader-2": "will be hosted. Selecting the closest zone to your users will improve performance",
-
+        "deploy-hidden": "This deployment is private, it is not visible on the Internet",
+        "deploy-github": "Linked to GitHub",
+        "deploy-search": "Search resources...",
+        "deploy-updating": "Updating list...",
+        "selected": "Selected",
+        "no-deployments-found": "No resources found",
+        "no-results-for": "No results for",
+        "no-results-for-subheader": "Try searching for something else.",
         "landing-hero-gpu": "GPUs",
         "landing-hero-cpu": "CPU cores",
         "landing-hero-ram": "Terabytes of memory",
