--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,9 @@
         "button-search": "Search",
         "button-clear": "Clear",
         "button-close": "Close",
+        "button-restart": "Restart",
         "button-detach-gpu": "Detach GPU",
+        "button-save": "Save",
         "loading": "Loading...",
         "error-could-not-fetch-users": "Could not fetch users",
         "error-could-not-fetch-vms": "Could not fetch vms",
@@ -87,7 +89,7 @@
         "create-deployment-custom-domain-subheader": "Specify a custom domain. Add a CNAME record for this domain pointing to app.cloud.cbh.kth.se. If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the deployment is created.",
         "create-deployment-domain": "Domain",
         "create-deployment-domain-example": "example.com",
-        "create-deployment-env": "Set environment variables",
+        "create-deployment-env": "Environment variables",
         "create-deployment-env-subheader": "Environment variables are accessible from inside your deployment and can be used to configure your application, store secrets, and more. Traffic will be sent to the port specified in the PORT environment variable. Change its value to the port your app is listening to",
         "create-deployment-env-key": "Variable",
         "create-deployment-env-value": "Value",
@@ -146,6 +148,8 @@
         "llama-mysql": "mysql database",
         "llama-machine-learning": "machine learning",
         "llama-react-frontend": "react frontend",
+        "explain-deployment": "Ideal for web apps. Provides the ability to easily run a single container. Allows for CI/CD through GitHub Actions and other pipelines. Your repo must have a Dockerfile.",
+        "explain-vm": "Provides the ability to run an operating system directly. More versatile but deployment and maintenance will be more difficult. Ideal for GPU compute.",
         "choose-zone": "Choose zone",
         "choose-zone-subheader-1": "Your chosen zone determines where your",
         "choose-zone-subheader-2": "will be hosted. Selecting the closest zone to your users will improve performance",
@@ -157,6 +161,115 @@
         "no-deployments-found": "No resources found",
         "no-results-for": "No results for",
         "no-results-for-subheader": "Try searching for something else.",
+        "editing": "Editing",
+        "you-are-impersonating-user": "You are impersonating user",
+        "back-to-admin-panel": "Back to admin panel",
+        "resource-deleting": "Resource deleting... ",
+        "error-deleting-resource": "Error deleting resource: ",
+        "deployment-in-progress": "deployment in progress... ",
+        "failed-update": "Failed to update",
+        "visit-page": "Visit page",
+        "storage-manager": "Manage storage",
+        "saving-domain-update": "Saving domain update...",
+        "could-not-update-domain": "Could not update domain",
+        "environment-variables-saving": "Saving environment variables...",
+        "could-not-save-environment-variables": "Could not save environment variables",
+        "deploy-with-docker-cli": "Deploy with Docker CLI",
+        "deploy-with-docker-cli-subheader": "Run this in your terminal with Docker installed to publish your app.",
+        "deploy-with-github-actions": "Deploy with GitHub Actions",
+        "deploy-with-github-actions-subheader": "Add this to your GitHub Actions workflow to publish your app.",
+        "copy-to-clipboard": "Copy to clipboard",
+        "unsure-where-to-paste-this": "Unsure where to paste this?",
+        "github-actions-quickstart": "GitHub Actions quickstart",
+        "hide": "Hide",
+        "show": "Show",
+        "secrets": "secrets",
+        "danger-zone": "Danger zone",
+        "danger-zone-subheader": "These secrets are sensitive and should not be public. Add them to your GitHub repository as secrets.",
+        "saving-image-update": "Saving image update...",
+        "could-not-save-image": "Could not save image: ",
+        "image-subheader": "Edit or update your deployment's image. For example mongo, mongo:4.4 or quay.io/keycloak/keycloak",
+        "logs": "Logs",
+        "logs-subheader": "View logs from your deployment.",
+        "copy": "Copy",
+        "download": "Download",
+        "no-logs-found": "No logs found! Cause some trouble and check back here.",
+        "compact-view": "Compact view",
+        "line-wrap": "Line wrap",
+        "visibility-saving": "Saving visibility...",
+        "could-not-save-visibility": "Could not save visibility: ",
+        "visibility-subheader": "Choose whether to make this deployment hidden from the internet",
+        "lease-gpu": "Lease GPU",
+        "renew-gpu-lease": "Renew GPU lease",
+        "gpu-lease": "GPU Lease",
+        "gpu-lease-subheader": "Leasing a GPU allows you to use it for a limited time.",
+        "leased-until": "Leased until",
+        "lease-expired": "Lease expired",
+        "could-not-attach-gpu": "Could not attach GPU: ",
+        "could-not-detach-gpu": "Could not detach GPU: ",
+        "lease-expired-header": "Your GPU lease has expired.",
+        "lease-expired-subheader": " The GPU will remain attached until someone else leases it. If you want to use it again, you will need to lease it again.",
+        "cancel": "Cancel",
+        "gpu-attached": "GPU attached",
+        "gpu-drivers-1": "You will need to install the drivers and software yourself.",
+        "gpu-drivers-2": "On Ubuntu, run ",
+        "gpu-drivers-3": " to install the latest drivers.",
+        "learn-more": "Learn more",
+        "port-changes-saving": "Saving port changes...",
+        "could-not-change-ports": "Could not change ports: ",
+        "port-forwarding": "Port forwarding",
+        "port-forwarding-subheader-1": "Forward traffic from the internet to your deployment.",
+        "port-forwarding-subheader-2": "For example, if your app is listening on port 3000, you can forward port 80 to port 3000 to make it accessible on the web",
+        "port-forwarding-subheader-3": "Access them at ",
+        "or": "or",
+        "external_port": ":[external_port]",
+        "protocol": "Protocol",
+        "internal": "Internal",
+        "external": "External",
+        "internal-port": "Internal port",
+        "creating-proxy": "Creating proxy ",
+        "deleting-proxy": "Deleting proxy ",
+        "proxies": "Proxies",
+        "proxies-subheader-1": "Deploy a proxy to a port forwarded from your VM.",
+        "proxies-subheader-2": "This makes them accessible with a nice URL instead of the randomly assigned external port.",
+        "new-proxy": "New proxy",
+        "select-port": "Select port to proxy to",
+        "admin-name-call-to-action": "Proxy will have name: ",
+        "cname-record": "You need a CNAME record to app.cloud.cbh.kth.se",
+        "deploy-proxy": "Deploy proxy",
+        "url": "URL",
+        "tcp-first": "Create a TCP port forwarding rule first",
+        "deleting": "Deleting...",
+        "custom-domain-optional": "Custom domain (optional)",
+        "error-fetching-snapshot": "Error fetching snapshots: ",
+        "creating-snapshot": "Creating snapshot...",
+        "error-creating-snapshot": "Error creating snapshot: ",
+        "reverting-to-snapshot": "Reverting to snapshot...",
+        "error-reverting-to-snapshot": "Error reverting to snapshot: ",
+        "latest": "Latest",
+        "snapshots": "Snapshots",
+        "snapshots-subheader": "Snapshots allow you to save the state of the virtual machine at a point in time. You can revert to that state at any time",
+        "your-snapshots": "Your snapshots",
+        "selected-snapshot": "Selected snapshot",
+        "revert-to-this-snapshot": "Revert to this snapshot",
+        "revert": "Revert",
+        "create-new-snapshot": "Create new snapshot",
+        "your-snapshot-will-be-created-as": "Your snapshot will be created as",
+        "specs-saving": "Saving specs...",
+        "could-not-save-specs": "Could not save specs: ",
+        "specs-subheader": "Grow or shrink your VM to match your use case",
+        "memory": "Memory",
+        "network-speed": "Network speed",
+        "ssh-string": "SSH Connection string",
+        "ssh-string-subheader": "Run this in your terminal to connect to your VM",
+        "vm-deleting": "VM deleting...",
+        "error-deleting-vm": "Error deleting VM: ",
+        "vm-in-progress": " VM in progress...",
+        "could-not-execute-command": "Could not execute command: ",
+        "stop": "Stop",
+        "start": "Start",
+        "reboot": "Reboot",
+
         "landing-hero-gpu": "GPUs",
         "landing-hero-cpu": "CPU cores",
         "landing-hero-ram": "Terabytes of memory",
