--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,7 +98,7 @@
         "create-deployment-app-path": "App path",
         "create-deployment-app-path-label": "Path in your app",
         "create-deployment-storage-path": "Storage path",
-        "create-deployment-storage-path-label": "Path in your kthcloud storage",
+        "create-deployment-storage-path-label": "Path in your cbhcloud storage",
         "create-and-stay": "Create and stay",
         "create-and-go": "Create",
         "create-vm": "Create VM",
@@ -269,7 +269,69 @@
         "stop": "Stop",
         "start": "Start",
         "reboot": "Reboot",
+        "getting-started": "Getting started",
+        "skip": "Skip",
+        "onboarding-welcome": "Welcome to cbhcloud!",
+        "onboarding-profile": "Your profile",
+        "onboarding-resources": "Resources on cbhcloud",
+        "onboarding-deployments": "Resource type: Deployments",
+        "onboarding-vms": "Resource type: Virtual Machines",
+        "onboarding-gpu": "GPU",
+        "onboarding-finish": "Let's go!",
+        "onboarding-welcome-1": "We're thrilled you want to try out cbhcloud! This is a quick guide to get you started.",
+        "onboarding-welcome-2": "We offer a cutting-edge private cloud infrastructure tailored to meet the unique needs of KTH's bright minds. Seamlessly run experiments, collaborate on groundbreaking research, and harness the power of cloud technology to drive innovation.",
+        "onboarding-profile-1": "Your profile is where you can find your personal information and view your quotas.",
+        "onboarding-profile-2": "You can also find your SSH keys here. These keys enable you to connect to your virtual machines.",
+        "onboarding-resources-1": "cbhcloud resources are graciously provided by researchers, the KTH IT department, KTH PDC and new hardware is funded through the European Union's Erasmus project.",
+        "onboarding-resources-2": "Keep in mind that cbhcloud is a shared resource. Please be considerate of your fellow students and researchers and only use what you need.",
+        "onboarding-resources-3": "If you need more resources, please contact us on Discord!",
+        "onboarding-deployments-1": "Deployments are the most common resource type on cbhcloud. They are perfect for running experiments, or hosting websites.",
+        "onboarding-deployments-2": "All you need is a Docker image or a repo with a Dockerfile, and a little bit of configuration. cbhcloud will take care of the rest.",
+        "onboarding-vms-1": "Virtual machines are the most flexible resource type on cbhcloud. You can install any programs you want and have full control over the machine.",
+        "onboarding-vms-2": "Virtual machines are perfect for running machine learning models, databases and other more complex applications.",
+        "onboarding-vms-3": "You can also request a GPU for your virtual machine. Please note that GPU resources are limited, for extended use you may want to provide your own GPU.",
+        "onboarding-gpu-1": "cbhcloud provides access to top of the line GPUs from NVIDIA. These GPUs are perfect for training machine learning models.",
+        "onboarding-gpu-2": "GPU resources are limited, for extended use you may want to provide your own GPU.",
+        "onboarding-finish-1": "That's it! You're ready to start using cbhcloud.",
+        "onboarding-finish-2": "If you have any questions, please contact us on Discord.",
+        "onboarding-finish-3": "Happy hacking! - cbhcloud team",
+        "onboarding-wait-1":"Please wait as we finish setting up your account.",
+        "onboarding-wait-2": "Hmm, it seems this is taking a while. Try refreshing the page or contact us on Discord.",
+        "profile": "Profile",
+        "copy-key": "Copy key",
+        "could-not-fetch-profile": "Could not fetch profile: ",
+        "successfully-updated": "Successfully updated",
+        "gravatar": "We use Gravatar for profile pictures. Change it at ",
+        "ssh-public-keys": "SSH public keys",
+        "ssh-public-keys-subheader-1": "Your public keys will be installed when creating a VM. Changes will not apply to existing resources",
+        "ssh-public-keys-subheader-2": "Please ensure you are uploading your public SSH key",
+        "e-g": "e.g.",
+        "key": "Key",
+        "select-key-file": "Select key file",
+        "view-onboarding": "View tutorial",
+        "view-onboarding-subheader": "Need a refresher? View the tutorial again.",
+        "reset-onboarding": "View tutorial",
+        "quotas": "Quotas",
+        "quotas-subheader": "Use resources in any way that fits you, and sums up under these quotas",
+        "details": "Details",
+        "404-title": "404 - Page not found",
+        "page-not-found": "Sorry, page not found!",
+        "page-not-found-subheader": "Sorry, we couldn't find the page you're looking for. Perhaps you've mistyped the URL? Be sure to check your spelling.",
+        "take-me-back": "Take me back",
+        "running-containers": "Running containers",
+        "server-statistics": "Server statistics",
+        "overview": "Overview",
+        "cpu-capacity": "CPU capacity",
+        "ram-capacity": "RAM capacity",
+        "gpu-capacity": "GPU capacity",
+        "latest-posts-on-mastodon": "Latest posts on Mastodon",
+        
 
+
+        "error-updating": "Error updating ",
+        "previous": "Previous",
+        "next": "Next",
+        "finish": "Finish",
         "landing-hero-gpu": "GPUs",
         "landing-hero-cpu": "CPU cores",
         "landing-hero-ram": "Terabytes of memory",
