--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -337,6 +337,7 @@
         "landing-hero-ram": "Terabytes of memory",
         "landing-intro-header": "Welcome to",
         "landing-intro-body": "We offer a cutting-edge private cloud infrastructure tailored to meet the unique needs of KTH's bright minds. Seamlessly run experiments, collaborate on groundbreaking research, and harness the power of cloud technology to drive innovation.",
-        "landing-intro-footer": "Register today free of charge - all you need is a KTH account."
+        "landing-intro-footer": "Register today free of charge - all you need is a KTH account.",
+        "connection-status": "Connection status"
     }
 }
