Add link to contribute on GitHub, closes #93

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,10 +36,11 @@
         "menu-create-new": "Create new",
         "menu-profile": "Profile",
         "menu-cbhcloud": "cbhcloud",
-        "menu-status": "Status",
+        "menu-status": "Server status",
         "menu-wiki": "Wiki",
-        "menu-support": "Support",
+        "menu-support": "Discord",
         "menu-mastodon": "Mastodon",
+        "menu-github": "Contribute on GitHub",
         "menu-admin": "Admin",
         "menu-admin-panel": "Admin panel",
         "menu-cloudstack": "CloudStack",
