--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -32,6 +32,7 @@
     "error-could-not-fetch-vms": "Kunde inte hämta VMs",
     "environment-variables-saving": "Sparar variabler...",
     "menu-mastodon": "Mastodon",
+    "menu-github": "GitHub",
     "editing": "Redigerar",
     "logs": "Logg",
     "admin-name": "Namn",
@@ -327,7 +328,7 @@
     "menu-profile": "Profil",
     "create-vm-minimum-ram": "Minst RAM",
     "create-deployment-github-repo": "Kodförråd",
-    "menu-support": "Support",
+    "menu-support": "Discord",
     "menu-wiki": "Wiki",
     "resouce-comparison-image-processing-services": "Bildbehandlingstjänster: t.ex. Pillow, OpenCV",
     "button-change-language": "Change language",
