Add resource transfer, closes #91

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -355,6 +355,28 @@
         "bronze": "Bronze",
         "silver": "Silver",
         "gold": "Gold",
-        "platinum": "Platinum"
+        "platinum": "Platinum",
+        "inbox": "Inbox",
+        "notifications": "Notifications",
+        "notificationsSubheader": "Notifications are messages from kthcloud or from other users. Some have actions you can take, such as accepting a request to join a project.",
+        "search-error": "Couldn't search: ",
+        "successfully-transferred": "Successfully transferred",
+        "back-to-dashboard": "Back to dashboard",
+        "transfer-ownership": "Transfer ownership",
+        "transfer-ownership-action": "transfer ownership",
+        "search-for-users": "Search for users",
+        "transfer": "transfer",
+        "to-user": "to user",
+        "are-you-sure-you-want-to": "Are you sure you want to",
+        "this-action-cannot-be-undone": "This action cannot be undone.",
+        "empty-inbox": "Nothing to see here! Grab a cup of coffee and check back later.",
+        "resourceError": "Error",
+        "resourceUnknown": "Unknown",
+        "resourceStopped": "Stopped",
+        "resourceBeingCreated": "Being Created",
+        "resourceBeingDeleted": "Being Deleted",
+        "resourceStarting": "Starting",
+        "resourceStopping": "Stopping",
+        "resourceRunning": "Running"
     }
 }
