--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -355,6 +355,28 @@
     "bronze": "Brons",
     "silver": "Silver",
     "gold": "Guld",
-    "platinum": "Max"
+    "platinum": "Max",
+    "inbox": "Inkorg",
+    "notifications": "Notiser",
+    "notificationsSubheader": "Notiser är meddelanden from kthcloud eller från andra användare. Vissa notiser har val du kan göra, som att gå med i projekt.",
+    "search-error": "Sökning misslyckades: ",
+    "successfully-transferred": "Överföringen lyckades",
+    "back-to-dashboard": "Tillbaka till översikten",
+    "transfer-ownership": "Byt ägare",
+    "transfer-ownership-action": "byt ägare",
+    "search-for-users": "Sök användare",
+    "transfer": "överföra",
+    "to-user": "till användare",
+    "are-you-sure-you-want-to": "Är du säker på att du vill",
+    "this-action-cannot-be-undone": "Ändringen är permanent och kan inte ångras.",
+    "empty-inbox": "Inga notiser, vilken härlig dag! Ta en kopp kaffe så kanske det kommer något.",
+    "resourceError": "Fel",
+    "resourceUnknown": "Okänd",
+    "resourceStopped": "Stoppad",
+    "resourceBeingCreated": "Skapas",
+    "resourceBeingDeleted": "Raderas",
+    "resourceStarting": "Startar",
+    "resourceStopping": "Stannar",
+    "resourceRunning": "OK"
   }
 }
