Add retry indicator, closes #100

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -378,6 +378,9 @@
         "resourceBeingDeleted": "Being Deleted",
         "resourceStarting": "Starting",
         "resourceStopping": "Stopping",
-        "resourceRunning": "Running"
+        "resourceRunning": "Running",
+        "connectionError": "Unable to connect to server",
+        "retrying-in": "Retrying in",
+        "seconds": "seconds"
     }
 }
