--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -361,7 +361,7 @@
     "notificationsSubheader": "Notiser är meddelanden from kthcloud eller från andra användare. Vissa notiser har val du kan göra, som att gå med i projekt.",
     "search-error": "Sökning misslyckades: ",
     "update-error": "Uppdatering misslyckades: ",
-    "successfully-transferred": "Överföringen lyckades",
+    "successfully-transferred": "Överföringsförfrågan skickad",
     "back-to-dashboard": "Tillbaka till översikten",
     "transfer-ownership": "Byt ägare",
     "transfer-ownership-action": "byt ägare",
